WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274612
Fix site isolation overlay crash during teardown
https://bugs.webkit.org/show_bug.cgi?id=274612
Summary
Fix site isolation overlay crash during teardown
pascoe@apple.com
Reported
2024-05-23 14:08:32 PDT
The WeakHashMap will remove it's null references for pages that have been destructed, but during that teardown a WeakRef containing the same page gets accessed, causing a crash.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-23 14:08:49 PDT
<
rdar://problem/128636304
>
pascoe@apple.com
Comment 2
2024-05-23 14:12:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29014
EWS
Comment 3
2024-05-28 10:11:38 PDT
Committed
279386@main
(4d646a441196): <
https://commits.webkit.org/279386@main
> Reviewed commits have been landed. Closing PR #29014 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug